# AI-Benchmark-Suite

./: AGENTS.md  README.md  benchmark_framework.md  models.classifier.yaml  models.cloud.yaml  models.example.yaml  models.openai-cheap.yaml  pyproject.toml
benchkit/: __init__.py  cache.py  cli.py  config.py  dataset.py  diff.py  doctor.py  env.py  pricing.py  redact.py  report.py  runner.py  template.py  types.py
benchkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
benchkit/evaluators/: __init__.py  composite.py  exact_fields.py  json_schema.py
benchkit/providers/: __init__.py  anthropic_messages.py  base.py  gemini_generate_content.py  lmstudio_responses.py  openai_responses.py
benchkit/templates/: report.html.j2
pricing/: cloud.yaml  openai-cheap.yaml  openai.yaml
suites/whatsapp_importance/: README.md  cases.jsonl  suite.yaml
suites/whatsapp_importance_classifier/: README.md  cases.jsonl  suite.yaml
tests/: test_cli.py  test_config.py  test_dataset.py  test_diff.py  test_evaluators.py  test_provider_anthropic.py  test_provider_gemini.py  test_provider_lmstudio.py  test_provider_openai.py  test_runner.py  test_template.py
tests/fixtures/: models.yaml  pricing.yaml  simple_cases.jsonl  simple_suite.yaml
